tdf#65509 - re-make visible userautosave config option
This reverts LO 5.0 commit 4653c91a89cfe802754377bcdafc291526254a03

It was hidden because the feature didn't work well.
Many of the "stumbling blocks" have been removed since version 5,
and many people - especially in this age of web apps - expect
a program to automatically take care of saving their documents.
So make the option visible again.

Change-Id: I09e73b0c96df697b4dfb8b7705ca28191ce6f8b4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154389
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>

--- a/cui/uiconfig/ui/optsavepage.ui
+++ b/cui/uiconfig/ui/optsavepage.ui
@@ -182,6 +182,7 @@
             <child>
               <object class="GtkCheckButton" id="userautosave">
                 <property name="label" translatable="yes" context="optsavepage|userautosave">Automatically save the document too</property>
+                <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
                 <property name="margin-start">12</property>
