tdf#68565 autosave: add option to store backup in document's folder
Creating a backup copy became the default in LO 7.6.

Allow the user to choose whether to store this previous version
of the file beside the original file (in the same folder).
The historical (and still the default) action
is to store it in a special backup folder instead.

The problem with the backup folder is that it overwrites files
that happen to have the same name (because the originals
reside in different directories), which is not uncommon.
Adding this option allows the user to overcome that limitation.

However, I do not want this new option to become the default,
because it effectively doubles the number of documents
stored in the document folder.
I think that is very messy, and previous versioning is best
left to dedicated backup tools - which would not appreciate
doubling the number of documents they preserve.
Plus I've worked with enough novice users to know that people are easily
confused when multiple documents have (essentially) the same name.

Change-Id: I503f656af91807019587e3d7b0d82b661f1eb437
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154489
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>

--- a/cui/uiconfig/ui/optsavepage.ui
+++ b/cui/uiconfig/ui/optsavepage.ui
@@ -185,7 +185,7 @@
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="receives_default">False</property>
-                <property name="margin-start">12</property>
+                <property name="margin-start">18</property>
                 <property name="use_underline">True</property>
                 <property name="draw_indicator">True</property>
                 <child internal-child="accessible">
@@ -215,7 +215,7 @@
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">4</property>
+                <property name="top_attach">5</property>
               </packing>
             </child>
             <child>
@@ -253,7 +253,7 @@
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">5</property>
+                <property name="top_attach">6</property>
               </packing>
             </child>
             <child>
@@ -273,6 +273,26 @@
               <packing>
                 <property name="left_attach">0</property>
                 <property name="top_attach">3</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkCheckButton" id="backupintodocumentfolder">
+                <property name="label" translatable="yes" context="optsavepage|backupintodocumentfolder">Place backup in same folder as document</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">False</property>
+                <property name="margin-start">18</property>
+                <property name="use_underline">True</property>
+                <property name="draw_indicator">True</property>
+                <child internal-child="accessible">
+                  <object class="AtkObject" id="backupintodocumentfolder-atkobject">
+                    <property name="AtkObject::accessible-description" translatable="yes" context="optsavepage|backupintodocumentfolder">Specifies if the backup copy should be stored in the same folder as the original document. If not selected, the backup copy is stored in the folder specified in Tools - Options - %PRODUCTNAME - Paths - Backups.</property>
+                  </object>
+                </child>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">4</property>
               </packing>
             </child>
           </object>
