related tdf#126095 sd notebookbar: give room to .uno:AVMediaToolBox
There are lots of controls on the media player (like mute, position etc)
that are obviously not accessible if the control is squished to a small size.

Giving full access is especially important if we do not show
the extra toolbar, but depend on this notebookbar context switch.

Change-Id: Ie766c426182469015a3431b83c852ce16d7436f7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154560
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>

--- a/sd/uiconfig/simpress/ui/notebookbar.ui
+++ b/sd/uiconfig/simpress/ui/notebookbar.ui
@@ -14881,66 +14881,31 @@
                           </packing>
                         </child>
                         <child>
-                          <object class="GtkBox" id="box15">
+                            <object class="sfxlo-NotebookbarToolBox" id="SectionBottom138">
+                            <property name="width_request">148</property>
                             <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="orientation">vertical</property>
+                            <property name="can_focus">True</property>
+                            <property name="show_arrow">False</property>
                             <child>
-                              <object class="sfxlo-NotebookbarToolBox" id="SectionBottom138">
-                                <property name="width_request">148</property>
+                                <object class="GtkToolButton" id="Media-AVMediaToolBox">
                                 <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="show_arrow">False</property>
-                                <child>
-                                  <object class="GtkToolButton" id="Media-AVMediaToolBox">
-                                    <property name="visible">True</property>
-                                    <property name="action_name">.uno:AVMediaToolBox</property>
-                                  </object>
-                                  <packing>
-                                    <property name="expand">False</property>
-                                    <property name="homogeneous">True</property>
-                                  </packing>
-                                </child>
-                              </object>
-                              <packing>
+                                <property name="action_name">.uno:AVMediaToolBox</property>
+                                </object>
+                                <packing>
                                 <property name="expand">False</property>
-                                <property name="fill">True</property>
-                                <property name="position">0</property>
-                              </packing>
+                                <property name="homogeneous">True</property>
+                                </packing>
                             </child>
-                            <child>
-                              <object class="sfxlo-NotebookbarToolBox" id="SectionBottom139">
-                                <property name="visible">True</property>
-                                <property name="can_focus">True</property>
-                                <property name="toolbar_style">both-horiz</property>
-                                <property name="show_arrow">False</property>
-                                <child>
-                                  <object class="GtkToolButton" id="Media-AVMediaPlayer1">
-                                    <property name="visible">True</property>
-                                    <property name="action_name">.uno:AVMediaPlayer</property>
-                                  </object>
-                                  <packing>
-                                    <property name="expand">False</property>
-                                    <property name="homogeneous">True</property>
-                                  </packing>
-                                </child>
-                              </object>
-                              <packing>
-                                <property name="expand">False</property>
-                                <property name="fill">True</property>
-                                <property name="position">1</property>
-                              </packing>
-                            </child>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
+                            </object>
+                            <packing>
+                            <property name="expand">True</property>
                             <property name="fill">True</property>
-                            <property name="position">1</property>
-                          </packing>
+                            <property name="position">0</property>
+                            </packing>
                         </child>
                       </object>
                       <packing>
-                        <property name="expand">False</property>
+                        <property name="expand">True</property>
                         <property name="fill">True</property>
                         <property name="position">7</property>
                       </packing>
