tdf#156137 - A11Y - Fix Long object names need to proper handling
Add text wrap option (long names ends with '...') for in case of proper
handling of long GOTO GtkLinkButton objects in case of accessibility sidebar.

Change-Id: I3c4af522fc34289ca57b1a7878134c34353bbc47
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154726
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>

--- a/svx/uiconfig/ui/accessibilitycheckentry.ui
+++ b/svx/uiconfig/ui/accessibilitycheckentry.ui
@@ -37,6 +37,7 @@
         <property name="receives-default">True</property>
         <property name="halign">start</property>
         <property name="hexpand">True</property>
+        <property name="wrap">True</property>
         <property name="relief">none</property>
       </object>
       <packing>
