Improved Accesibility String in Certificate Chooser Dialog
Change-Id: Ib9f93d626b7f2629ebfb17f0f0f43af8fe24d4ee
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154744
Tested-by: Jenkins
Reviewed-by: Thorsten Behrens <thorsten.behrens@allotropia.de>

--- a/xmlsecurity/uiconfig/ui/selectcertificatedialog.ui
+++ b/xmlsecurity/uiconfig/ui/selectcertificatedialog.ui
@@ -253,7 +253,7 @@
                 <property name="primary-icon-stock">gtk-find</property>
                 <child internal-child="accessible">
                   <object class="AtkObject" id="searchbox-atkobject">
-                    <property name="AtkObject::accessible-description" translatable="yes" context="selectcertificatedialog|extended_tip|searchbox">Type certificate for searching.</property>
+                    <property name="AtkObject::accessible-description" translatable="yes" context="selectcertificatedialog|extended_tip|searchbox">Search for certificate by issuer name or email.</property>
                   </object>
                 </child>
               </object>
