--- a/xmlsecurity/uiconfig/ui/selectcertificatedialog.ui
+++ b/xmlsecurity/uiconfig/ui/selectcertificatedialog.ui
@@ -250,6 +250,7 @@
                 <property name="can-focus">True</property>
                 <property name="activates-default">True</property>
                 <property name="truncate-multiline">True</property>
+                <property name="primary-icon-stock">gtk-find</property>
                 <child internal-child="accessible">
                   <object class="AtkObject" id="searchbox-atkobject">
                     <property name="AtkObject::accessible-description" translatable="yes" context="selectcertificatedialog|extended_tip|searchbox">Type certificate for searching.</property>
