--- a/svx/uiconfig/ui/accessibilitycheckentry.ui
+++ b/svx/uiconfig/ui/accessibilitycheckentry.ui
@@ -2,13 +2,14 @@
 <!-- Generated with glade 3.40.0 -->
 <interface domain="svx">
   <requires lib="gtk+" version="3.20"/>
-  <object class="GtkBox" id="accessibilityCheckEntryBox">
+  <!-- n-columns=3 n-rows=1 -->
+  <object class="GtkGrid" id="accessibilityCheckEntryBox">
     <property name="visible">True</property>
     <property name="can-focus">False</property>
     <property name="margin-top">1</property>
     <property name="margin-bottom">1</property>
     <property name="hexpand">True</property>
-    <property name="spacing">6</property>
+    <property name="column-spacing">6</property>
     <child>
       <object class="GtkLabel" id="accessibilityCheckEntryLabel">
         <property name="visible">True</property>
@@ -25,9 +26,8 @@
         </child>
       </object>
       <packing>
-        <property name="expand">True</property>
-        <property name="fill">True</property>
-        <property name="position">0</property>
+        <property name="left-attach">0</property>
+        <property name="top-attach">0</property>
       </packing>
     </child>
     <child>
@@ -35,14 +35,13 @@
         <property name="visible">True</property>
         <property name="can-focus">True</property>
         <property name="receives-default">True</property>
-        <property name="halign">start</property>
         <property name="hexpand">True</property>
         <property name="relief">none</property>
+        <property name="xalign">0</property>
       </object>
       <packing>
-        <property name="expand">True</property>
-        <property name="fill">True</property>
-        <property name="position">1</property>
+        <property name="left-attach">1</property>
+        <property name="top-attach">0</property>
       </packing>
     </child>
     <child>
@@ -55,9 +54,8 @@
         <property name="valign">center</property>
       </object>
       <packing>
-        <property name="expand">False</property>
-        <property name="fill">False</property>
-        <property name="position">2</property>
+        <property name="left-attach">2</property>
+        <property name="top-attach">0</property>
       </packing>
     </child>
   </object>
