--- a/svx/uiconfig/ui/themecoloreditdialog.ui
+++ b/svx/uiconfig/ui/themecoloreditdialog.ui
@@ -34,6 +34,7 @@
                 <property name="expand">False</property>
                 <property name="fill">True</property>
                 <property name="position">0</property>
+                <property name="secondary">True</property>
               </packing>
             </child>
             <child>
