gtk: silence gtk_label_set_label: assertion 'GTK_IS_LABEL (label)' failed
Change-Id: I7c6a4add9fe11ed123ce81302998ad246538c7fb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154991
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>

--- a/svx/uiconfig/ui/themecoloreditdialog.ui
+++ b/svx/uiconfig/ui/themecoloreditdialog.ui
@@ -150,6 +150,7 @@
                     <property name="receives-default">False</property>
                     <property name="xalign">0</property>
                     <property name="draw-indicator">True</property>
+                    <property name="label" translatable="no"></property>
                     <child>
                       <placeholder/>
                     </child>
@@ -169,6 +170,7 @@
                     <property name="receives-default">False</property>
                     <property name="xalign">0</property>
                     <property name="draw-indicator">True</property>
+                    <property name="label" translatable="no"></property>
                     <child>
                       <placeholder/>
                     </child>
@@ -188,6 +190,7 @@
                     <property name="receives-default">False</property>
                     <property name="xalign">0</property>
                     <property name="draw-indicator">True</property>
+                    <property name="label" translatable="no"></property>
                     <child>
                       <placeholder/>
                     </child>
@@ -275,6 +278,7 @@
                     <property name="receives-default">False</property>
                     <property name="xalign">0</property>
                     <property name="draw-indicator">True</property>
+                    <property name="label" translatable="no"></property>
                     <child>
                       <placeholder/>
                     </child>
@@ -328,6 +332,7 @@
                     <property name="receives-default">False</property>
                     <property name="xalign">0</property>
                     <property name="draw-indicator">True</property>
+                    <property name="label" translatable="no"></property>
                     <child>
                       <placeholder/>
                     </child>
@@ -347,6 +352,7 @@
                     <property name="receives-default">False</property>
                     <property name="xalign">0</property>
                     <property name="draw-indicator">True</property>
+                    <property name="label" translatable="no"></property>
                     <child>
                       <placeholder/>
                     </child>
@@ -434,6 +440,7 @@
                     <property name="receives-default">False</property>
                     <property name="xalign">0</property>
                     <property name="draw-indicator">True</property>
+                    <property name="label" translatable="no"></property>
                     <child>
                       <placeholder/>
                     </child>
@@ -453,6 +460,7 @@
                     <property name="receives-default">False</property>
                     <property name="xalign">0</property>
                     <property name="draw-indicator">True</property>
+                    <property name="label" translatable="no"></property>
                     <child>
                       <placeholder/>
                     </child>
@@ -472,6 +480,7 @@
                     <property name="receives-default">False</property>
                     <property name="xalign">0</property>
                     <property name="draw-indicator">True</property>
+                    <property name="label" translatable="no"></property>
                     <child>
                       <placeholder/>
                     </child>
@@ -491,6 +500,7 @@
                     <property name="receives-default">False</property>
                     <property name="xalign">0</property>
                     <property name="draw-indicator">True</property>
+                    <property name="label" translatable="no"></property>
                     <child>
                       <placeholder/>
                     </child>
@@ -544,6 +554,7 @@
                     <property name="receives-default">False</property>
                     <property name="xalign">0</property>
                     <property name="draw-indicator">True</property>
+                    <property name="label" translatable="no"></property>
                     <child>
                       <placeholder/>
                     </child>
@@ -563,6 +574,7 @@
                     <property name="receives-default">False</property>
                     <property name="xalign">0</property>
                     <property name="draw-indicator">True</property>
+                    <property name="label" translatable="no"></property>
                     <child>
                       <placeholder/>
                     </child>
