--- a/svx/uiconfig/ui/themecoloreditdialog.ui
+++ b/svx/uiconfig/ui/themecoloreditdialog.ui
@@ -10,6 +10,7 @@
     <property name="vexpand">True</property>
     <property name="border-width">6</property>
     <property name="title" translatable="yes" context="themedialog|Title">Theme Color Edit</property>
+    <property name="modal">True</property>
     <property name="type-hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialogBox1">
