--- a/svx/uiconfig/ui/themedialog.ui
+++ b/svx/uiconfig/ui/themedialog.ui
@@ -8,6 +8,7 @@
     <property name="vexpand">True</property>
     <property name="border-width">6</property>
     <property name="title" translatable="yes" context="themedialog|Title">Theme</property>
+    <property name="modal">True</property>
     <property name="type-hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialogBox1">
