--- a/svx/uiconfig/ui/mediawindow.ui
+++ b/svx/uiconfig/ui/mediawindow.ui
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.1 -->
+<!-- Generated with glade 3.40.0 -->
 <interface domain="svx">
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkAdjustment" id="adjustment1">
     <property name="upper">100</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
+  </object>
+  <object class="GtkAdjustment" id="adjustment2">
+    <property name="upper">100</property>
+    <property name="step-increment">1</property>
+    <property name="page-increment">10</property>
   </object>
   <!-- n-columns=1 n-rows=1 -->
   <object class="GtkGrid" id="MediaWindow">
     <property name="visible">True</property>
-    <property name="can_focus">False</property>
-    <property name="border_width">6</property>
+    <property name="can-focus">False</property>
+    <property name="border-width">6</property>
     <child>
       <object class="GtkBox">
         <property name="visible">True</property>
-        <property name="can_focus">False</property>
+        <property name="can-focus">False</property>
         <property name="hexpand">True</property>
         <property name="vexpand">True</property>
         <property name="orientation">vertical</property>
@@ -23,10 +28,10 @@
         <child>
           <object class="GtkLabel" id="url">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="ellipsize">middle</property>
-            <property name="width_chars">10</property>
-            <property name="max_width_chars">10</property>
+            <property name="width-chars">10</property>
+            <property name="max-width-chars">10</property>
             <property name="xalign">0</property>
           </object>
           <packing>
@@ -38,16 +43,16 @@
         <child>
           <object class="GtkBox">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="spacing">12</property>
             <child>
               <object class="GtkScale" id="timeslider">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
+                <property name="can-focus">True</property>
                 <property name="hexpand">True</property>
                 <property name="adjustment">adjustment1</property>
                 <property name="digits">2</property>
-                <property name="draw_value">False</property>
+                <property name="draw-value">False</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -58,10 +63,10 @@
             <child>
               <object class="GtkEntry" id="timeedit">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
+                <property name="can-focus">True</property>
                 <property name="editable">False</property>
-                <property name="truncate-multiline">True</property>
                 <property name="xalign">0.5</property>
+                <property name="truncate-multiline">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -79,22 +84,23 @@
         <child>
           <object class="GtkBox">
             <property name="visible">True</property>
-            <property name="can_focus">False</property>
+            <property name="can-focus">False</property>
             <property name="hexpand">True</property>
             <property name="spacing">12</property>
             <child>
               <object class="GtkToolbar" id="playtoolbox">
                 <property name="visible">True</property>
-                <property name="can_focus">True</property>
+                <property name="can-focus">True</property>
                 <property name="halign">center</property>
-                <property name="toolbar_style">icons</property>
-                <property name="show_arrow">False</property>
+                <property name="toolbar-style">icons</property>
+                <property name="show-arrow">False</property>
                 <child>
                   <object class="GtkToolButton" id="open">
                     <property name="visible">True</property>
-                    <property name="label" translatable="no">Open</property>
-                    <property name="use_underline">True</property>
-                    <property name="icon_name">avmedia/res/av02048.png</property>
+                    <property name="can-focus">False</property>
+                    <property name="label" translatable="yes" context="mediawindow|toolbutton_open">Open</property>
+                    <property name="use-underline">True</property>
+                    <property name="icon-name">avmedia/res/av02048.png</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -104,9 +110,10 @@
                 <child>
                   <object class="GtkToolButton" id="apply">
                     <property name="visible">True</property>
-                    <property name="label" translatable="no">Apply</property>
-                    <property name="use_underline">True</property>
-                    <property name="icon_name">avmedia/res/av02053.png</property>
+                    <property name="can-focus">False</property>
+                    <property name="label" translatable="yes" context="mediawindow|toolbutton_apply">Apply</property>
+                    <property name="use-underline">True</property>
+                    <property name="icon-name">avmedia/res/av02053.png</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -116,7 +123,7 @@
                 <child>
                   <object class="GtkSeparatorToolItem" id="separator1">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -126,9 +133,10 @@
                 <child>
                   <object class="GtkToggleToolButton" id="play">
                     <property name="visible">True</property>
-                    <property name="label" translatable="no">Play</property>
-                    <property name="use_underline">True</property>
-                    <property name="icon_name">avmedia/res/av02049.png</property>
+                    <property name="can-focus">False</property>
+                    <property name="label" translatable="yes" context="mediawindow|toolbutton_play">Play</property>
+                    <property name="use-underline">True</property>
+                    <property name="icon-name">avmedia/res/av02049.png</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -138,9 +146,10 @@
                 <child>
                   <object class="GtkToggleToolButton" id="pause">
                     <property name="visible">True</property>
-                    <property name="label" translatable="no">Pause</property>
-                    <property name="use_underline">True</property>
-                    <property name="icon_name">avmedia/res/av02050.png</property>
+                    <property name="can-focus">False</property>
+                    <property name="label" translatable="yes" context="mediawindow|toolbutton_pause">Pause</property>
+                    <property name="use-underline">True</property>
+                    <property name="icon-name">avmedia/res/av02050.png</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -150,9 +159,10 @@
                 <child>
                   <object class="GtkToggleToolButton" id="stop">
                     <property name="visible">True</property>
-                    <property name="label" translatable="no">Stop</property>
-                    <property name="use_underline">True</property>
-                    <property name="icon_name">avmedia/res/av02051.png</property>
+                    <property name="can-focus">False</property>
+                    <property name="label" translatable="yes" context="mediawindow|toolbutton_stop">Stop</property>
+                    <property name="use-underline">True</property>
+                    <property name="icon-name">avmedia/res/av02051.png</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -162,7 +172,7 @@
                 <child>
                   <object class="GtkSeparatorToolItem" id="separator2">
                     <property name="visible">True</property>
-                    <property name="can_focus">False</property>
+                    <property name="can-focus">False</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -172,9 +182,10 @@
                 <child>
                   <object class="GtkToggleToolButton" id="loop">
                     <property name="visible">True</property>
-                    <property name="label" translatable="no">Repeat</property>
-                    <property name="use_underline">True</property>
-                    <property name="icon_name">avmedia/res/av02052.png</property>
+                    <property name="can-focus">False</property>
+                    <property name="label" translatable="yes" context="mediawindow|toolbutton_loop">Repeat</property>
+                    <property name="use-underline">True</property>
+                    <property name="icon-name">avmedia/res/av02052.png</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -191,19 +202,20 @@
             <child>
               <object class="GtkBox">
                 <property name="visible">True</property>
-                <property name="can_focus">False</property>
+                <property name="can-focus">False</property>
                 <child>
                   <object class="GtkToolbar" id="mutetoolbox">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
-                    <property name="toolbar_style">icons</property>
-                    <property name="show_arrow">False</property>
+                    <property name="can-focus">True</property>
+                    <property name="toolbar-style">icons</property>
+                    <property name="show-arrow">False</property>
                     <child>
                       <object class="GtkToggleToolButton" id="mute">
                         <property name="visible">True</property>
-                        <property name="label" translatable="no">Mute</property>
-                        <property name="use_underline">True</property>
-                        <property name="icon_name">avmedia/res/av02054.png</property>
+                        <property name="can-focus">False</property>
+                        <property name="label" translatable="yes" context="mediawindow|toolbutton_mute">Mute</property>
+                        <property name="use-underline">True</property>
+                        <property name="icon-name">avmedia/res/av02054.png</property>
                       </object>
                       <packing>
                         <property name="expand">False</property>
@@ -220,11 +232,11 @@
                 <child>
                   <object class="GtkScale" id="volumeslider">
                     <property name="visible">True</property>
-                    <property name="can_focus">True</property>
+                    <property name="can-focus">True</property>
                     <property name="opacity">0.9882352941176471</property>
                     <property name="hexpand">True</property>
                     <property name="adjustment">adjustment2</property>
-                    <property name="draw_value">False</property>
+                    <property name="draw-value">False</property>
                   </object>
                   <packing>
                     <property name="expand">False</property>
@@ -241,8 +253,8 @@
             </child>
             <child>
               <object class="GtkComboBoxText" id="zoombox">
-                <property name="can_focus">False</property>
-                <property name="no_show_all">True</property>
+                <property name="can-focus">False</property>
+                <property name="no-show-all">True</property>
               </object>
               <packing>
                 <property name="expand">False</property>
@@ -259,14 +271,9 @@
         </child>
       </object>
       <packing>
-        <property name="left_attach">0</property>
-        <property name="top_attach">0</property>
+        <property name="left-attach">0</property>
+        <property name="top-attach">0</property>
       </packing>
     </child>
-  </object>
-  <object class="GtkAdjustment" id="adjustment2">
-    <property name="upper">100</property>
-    <property name="step_increment">1</property>
-    <property name="page_increment">10</property>
   </object>
 </interface>
